# OnlineStore

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  user.txt
.gitlab/: .gitlab-ci.yml
src/apps/auth/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
src/apps/auth/api/: current_user_deps.py  dependencies.py
src/apps/auth/api/v1/: routers.py
src/apps/auth/api/v1/controllers/: auth.py
src/apps/auth/certs/: jwt-private.pem  jwt-public.pem
src/apps/auth/clients/: users.py
src/apps/auth/common/const/: mixins.py
src/apps/auth/common/exceptions/: mixins.py
src/apps/auth/common/interfaces/: abstraction_uow.py
src/apps/auth/common/models/: base.py  mixins.py
src/apps/auth/common/repositories/: base.py
src/apps/auth/common/schemas/: base.py  extensions.py
src/apps/auth/common/schemas/responses/: mixins.py
src/apps/auth/common/unit_of_works/: base.py
src/apps/auth/core/: config.py  constants.py  database.py  http_connector.py  log_config.yml  logger.py  security.py
src/apps/auth/models/: roles.py  users.py
src/apps/auth/modules/repositories/: auth_repository.py
src/apps/auth/modules/responses/: auth.py
src/apps/auth/modules/schemas/: auth_schema.py
src/apps/auth/modules/services/: auth_service.py
src/apps/auth/modules/unit_of_works/: auth_uow.py
src/apps/users/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
src/apps/users/api/: dependencies.py
src/apps/users/api/v1/: routers.py
src/apps/users/api/v1/controllers/: admin_panels.py  profiles.py
src/apps/users/app/application/common/: event_bus.py  exception.py  handler.py  transaction.py  unit_of_work.py
src/apps/users/app/application/common/const/: exceptions.py
src/apps/users/app/application/common/dto/: user_dto.py
src/apps/users/app/application/common/persistence/: user_reader.py
src/apps/users/app/application/common/ports/: commiter.py  event_bus.py  id_generator.py  unit_of_work.py  user_reader.py
src/apps/users/app/application/user/: exceptions.py
src/apps/users/app/application/user/commands/: create_user.py
src/apps/users/app/application/user/queries/: get_user.py
src/apps/users/app/domain/common/: aggregate_root.py  entity.py  event.py  exception.py  tracker.py  value_object.py
src/apps/users/app/domain/common/const/: exceptions.py
src/apps/users/app/domain/profile/: exceptions.py
src/apps/users/app/domain/user/: exceptions.py
src/apps/users/app/domain/user/entities/: user.py
src/apps/users/app/domain/user/events/: user_created.py
src/apps/users/app/domain/user/exceptions/: entity.py  value_objects.py
src/apps/users/app/domain/user/repositories/: user_repository.py
src/apps/users/app/domain/user/value_objects/: contacts.py  username.py
src/apps/users/app/entrypoint/: config.py  main.py  setup.py
src/apps/users/app/entrypoint/di/: setup.py
src/apps/users/app/entrypoint/di/providers/: __init__.py  adapters.py  app.py  broker.py  config.py  database.py  handlers.py  port.py
src/apps/users/app/entrypoint/setups/: app.py  di.py
src/apps/users/app/infrastructure/adapters/: id_generator.py
src/apps/users/app/infrastructure/brokers/rabbit/: config.py  connection.py  message.py  publisher.py  setup.py
src/apps/users/app/infrastructure/common/: serializers.py
src/apps/users/app/infrastructure/common/adapters/: id_generator.py
src/apps/users/app/infrastructure/common/models/: base.py
src/apps/users/app/infrastructure/common/protocols/: unit_of_work.py
src/apps/users/app/infrastructure/databases/postgres/: registry.py  unit_of_work.py
src/apps/users/app/infrastructure/db/postgres/: config.py  engine.py  registry.py  unit_of_work.py
src/apps/users/app/infrastructure/events/: converters.py  event_bus.py
src/apps/users/app/infrastructure/events/integrations/: integration_event.py
src/apps/users/app/infrastructure/queue/: converters.py  event_bus.py  serializers.py
src/apps/users/app/presentation/api/: setups.py
src/apps/users/app/presentation/api/controllers/: user.py
src/apps/users/app/presentation/api/exceptions/: authorized.py  base.py  handlers.py
src/apps/users/clients/: auth.py
src/apps/users/common/const/: response_exceptions.py
src/apps/users/common/enums/: role.py
src/apps/users/common/exceptions/: mixins.py
src/apps/users/common/interfaces/: abstraction_repository.py  abstraction_service.py  abstraction_uow.py
src/apps/users/common/models/: base.py  mixins.py
src/apps/users/common/repositories/: base.py  mixins.py
src/apps/users/common/schemas/: base.py  extensions.py
src/apps/users/common/schemas/api/: mixins.py
src/apps/users/common/schemas/filters/: mixins.py
src/apps/users/common/schemas/internal/: mixins.py
src/apps/users/common/schemas/responses/: mixins.py
src/apps/users/common/services/: base.py  mixins.py
src/apps/users/common/unit_of_works/: base.py
src/apps/users/config/: gunicorn.py
src/apps/users/core/: config.py  database.py  http_client.py  http_connector.py  log_config.yml  logger.py
src/apps/users/migrations/: env.py
src/apps/users/migrations/versions/: 2024-09-03-15-36--e85b4bc34a45--initial_revision.py  2024-09-03-15-41--69b84f27d4dc--init.py  2024_09_02_1501-bb8ee7d902ec_initial_revision.py
src/apps/users/models/: __init__.py  roles.py  users.py
src/apps/users/modules/repositories/: admin_panels.py  profiles.py
src/apps/users/modules/responses/: admin_panels.py  profiles.py
src/apps/users/modules/schemas/: admin_panels.py  profiles.py
src/apps/users/modules/services/: admin_panels.py  profiles.py
src/apps/users/modules/unit_of_works/: admin_panels.py  profiles.py
src/apps/users/scripts/: entrypoint.sh  formatting.sh
src/apps/users/scripts/app/: run_api.sh  run_migrations.sh
src/apps/users/tests/: bases.py  conftest.py  test.txt
src/apps/users/tests/unit/: test_admin_panels.py  test_profiles.py
src/apps/users/tests/unit/data/: admin_panels.py  profiles.py
src/apps/users/tests/unit/fixtures/: admin_panels.py  profiles.py
src/apps/users/utils/: initializer.py
(+109 files in other folders)
