[tool.poetry]
name = "user"
version = "0.1.0"
description = "Microservice of users"
authors = ["Akuev Anton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-alembic = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ----------------------- PYTEST -------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "session"
python_files = ["test*.py", "*test.py"]
python_functions = ["*_test", "test_*"]
norecursedirs = ["venv", ".venv", ".env", "migrations"]
asyncio_mode = "auto"
addopts = '-p no:warnings'
testpaths=[
    "tests/unit/test_admin_panels.py",
    "tests/unit/test_profiles.py",
    "tests/migrations/test_migrations.py",  # тестирования миграций.
]
